Bug 158999 - Incorrect rendering of empty paragraph with escapement set to superscript
Summary: Incorrect rendering of empty paragraph with escapement set to superscript
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:24.8.0 target:24.2.0.2
Keywords:
Depends on:
Blocks: DOCX-Paragraph
  Show dependency treegraph
 
Reported: 2024-01-03 15:05 UTC by Miklos Vajna
Modified: 2024-12-14 22:01 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Reproducer document (11.95 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2024-01-03 15:05 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2024-01-03 15:05:14 UTC
Created attachment 191731 [details]
Reproducer document

Steps to reproduce:

1. Open the attached file.

2. Check the number of paragraphs in the body text.

Expected result: 4 paragraphs, matching Word.

Actual result: 3 paragraphs.
Comment 1 m_a_riosv 2024-01-03 15:35:21 UTC
Reproducible, the empty paragraph is missing.
Version: 7.6.4.1 (X86_64) / LibreOffice Community
Build ID: e19e193f88cd6c0525a17fb7a176ed8e6a3e2aa1
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
and
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e0f710ad29d33acda3c1b77d7a0980ca9ae2e3d1
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: default; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 2 Commit Notification 2024-01-03 16:58:52 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ae974a9928aa435316f15626642d41c5dddafe99

tdf#158999 sw: fix bad zero text frame height with no text and auto superscript

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 m_a_riosv 2024-01-05 03:31:21 UTC
Verified.
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5056da285da2f130d741add1f8432cd590116a96
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: default; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 4 Commit Notification 2024-01-08 15:35:31 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/9c50de48b4c369b5fb91850253e63b7daa30adc7

tdf#158999 sw: fix bad zero text frame height with no text and auto superscript

It will be available in 24.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.